[project]
name = "download-files"
version = "0.1.0"
description = "Download files with specified extensions listed in <a> elements from a web page. The list of files can be reviewed first. "
license = {file= "LICENSE.md"}
readme = "README.md"
authors = [
    { name = "James Parrott", email = "james.parrott@proton.me" }
]
requires-python = ">=3.12"

dependencies = ["httpx",
                "rich",
                "beautifulsoup4",
                "typer",
                ]
[project.scripts]
download_files="download_files.main:app"
download-files="download_files.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
